# rust_blog_os

./: Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  multiboot_header.asm
src/memory/: area_frame_allocator.rs  mod.rs
