[package]
name = "rust_blog_os"
version = "0.1.0"
authors = ["Tyler Nienhouse <flakeparadigm@gmail.com>", "Philipp Oppermann <dev@phil-opp.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
spin = "0.4.0"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"
